--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.plot.ly/plotly-2.29.1.min.js" charset="UTF-8"></script>
 </head>
@@ -34,9 +39,6 @@
         <div class="block text">
             <div id="omszMsgDiv"></div>
         </div>
-        <div class="block text">
-            <div id="mavirMsgDiv"></div>
-        </div>
         <div class="block container">
             <div id="mavirPlotDiv"></div>
             <div class="inputs">
@@ -46,6 +48,9 @@
                 <button id="mavirForwardButton">Up</button>
                 <button id="mavirBackwardButton">Down</button>
             </div>
+        </div>
+        <div class="block text">
+            <div id="mavirMsgDiv"></div>
         </div>
     </main>
 </body>
