--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link id="siteLogoLink" rel="icon" type="image/x-icon" href="">
     <script src="https://kit.fontawesome.com/92e9c214ca.js" crossorigin="anonymous"></script>
     <script src="https://cdn.plot.ly/plotly-2.29.1.min.js" charset="UTF-8"></script>
 </head>
