Organize to subdirs

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <link id="siteLogoLink" rel="icon" type="image/x-icon" href="">
     <script src="https://kit.fontawesome.com/92e9c214ca.js" crossorigin="anonymous"></script>
     <script src="https://cdn.plot.ly/plotly-2.29.1.min.js" charset="UTF-8"></script>
@@ -81,9 +81,9 @@
     </main>
 </body>
 
-<script src="utility.js" charset="UTF-8"></script>
-<script src="weather.js" charset="UTF-8"></script>
-<script src="elload.js" charset="UTF-8"></script>
-<script src="updater.js" charset="UTF-8"></script>
+<script src="js/utility.js" charset="UTF-8"></script>
+<script src="js/weather.js" charset="UTF-8"></script>
+<script src="js/elload.js" charset="UTF-8"></script>
+<script src="js/updater.js" charset="UTF-8"></script>
 
 </html>
