--- a/client/index.html
+++ b/client/index.html
@@ -41,10 +41,9 @@
                 </p>
             </div>
             <div class="block container">
-
                 <img id="omszLogo" src="">
                 <div id="omszStationMapDiv">
-                    <div id="omszLoadingOverlay">
+                    <div id="omszLoadingOverlay" class="loading">
                         <div class="spinner"></div>
                     </div>
                     <div class="hider"></div>
@@ -73,7 +72,7 @@
             <div class="block container">
                 <img id="mavirLogo" src="">
                 <div id="mavirPlotDiv">
-                    <div id="mavirLoadingOverlay">
+                    <div id="mavirLoadingOverlay" class="loading">
                         <div class="spinner"></div>
                     </div>
                 </div>
