--- a/client/index.html
+++ b/client/index.html
@@ -125,6 +125,7 @@
 </body>
 
 <script src="js/utility.js" charset="UTF-8"></script>
+<script src="js/plotController.js" charset="UTF-8"></script>
 <script src="js/weather.js" charset="UTF-8"></script>
 <script src="js/elload.js" charset="UTF-8"></script>
 <script src="js/updater.js" charset="UTF-8"></script>
