--- a/client/index.html
+++ b/client/index.html
@@ -128,6 +128,7 @@
 <script src="js/controllers.js" charset="UTF-8"></script>
 <script src="js/weather.js" charset="UTF-8"></script>
 <script src="js/elload.js" charset="UTF-8"></script>
+<script src="js/ai.js" charset="UTF-8"></script>
 <script src="js/updater.js" charset="UTF-8"></script>
 
 </html>
