AI section title

--- a/client/index.html
+++ b/client/index.html
@@ -72,6 +72,11 @@
                 </p>
             </div>
             <div class="block text">
+                <h2>
+                    <script>langHTMLText("aiTitle")</script>
+                </h2>
+            </div>
+            <div class="block text">
                 <p>
                     <script>langHTMLText("aiDesc")</script>
                 </p>
