Plot scaling and nav row

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>Hungarian ELectricity and Weather</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -24,13 +24,13 @@
             <h1><abbr title="Hungarian ELectricity and Weather">HELaW</abbr></h1>
         </div>
         <nav>
-            <button id="language"><img src="pics/hungarian.png" alt="The flag of the selected language" /></button>
             <button id="omszPageButton" value="omsz">
                 <script>langHTMLText("omszPage")</script>
             </button>
             <button id="mavirPageButton" value="mavir">
                 <script>langHTMLText("mavirPage")</script>
             </button>
+            <button id="language"><img src="pics/hungarian.png" alt="The flag of the selected language" /></button>
         </nav>
     </header>
     <main>
